hphp/hack/test/typecheck/generic_attr2.php.exp
File "generic_attr2.php", line 8, characters 10-28:
Invalid return type (Typing[4110])
  File "generic_attr2.php", line 7, characters 32-37:
  Expected `string`
  File "generic_attr2.php", line 7, characters 32-37:
  This type argument to `:my-xhp` must match exactly (it is invariant)
  File "generic_attr2.php", line 7, characters 15-17:
  But got `int`
