hphp/hack/test/typecheck/generic_attr2.php
<?hh // strict

class :my-xhp<T> extends XHPTest {
  attribute T foo @required;
}

function test(int $x): :my-xhp<string> {
  return <my-xhp foo={$x} />;
}
